fix(timeline): fraction shift

--- a/src/components/video-timeline/Video-timeline.styles.css
+++ b/src/components/video-timeline/Video-timeline.styles.css
@@ -31,6 +31,7 @@ video-slider {
 
   &[disabled] {
     --height: 0.25rem!important;
+    --active-color: var(--progress-color);
   }
 
   :host(:not([full-width])) & {
